# clang-repl-wasm

./: CMakeLists.txt  CompilerModule.cpp  README.md  cppinterop_emscripten_build.diff  cppinterop_wasm-ld_command.txt  emscripten_wvjzp9b3.rsp.utf-8  fri_mar_13_2026_new_chat.md  index.js  link_step_with_latest_emsdk.txt  log1.diff  sat_mar_14_2026_new_chat.md  summary.md  tmps6n7_1we.json  tmptqjqh2js.json  xwidgets_shared.ipynb
wasm/: incr_module_0.wasm  incr_module_2.wasm
